# RISC-E-MIPS-Emulator-

./: CMakeLists.txt  README.md
examples/: memory.txt  primes.txt  rock_paper_scissors.txt  rock_paper_scissors_same_seed.txt  triangle.txt
include/: CPU.h
src/: CMakeLists.txt  CPU.cpp  CPU_Arithmetic.cpp  CPU_Control.cpp  CPU_Logical.cpp  CPU_Memory.cpp  CPU_Parsing.cpp  CPU_Utilities.cpp  Driver.cpp
